--- a/docs/css/solicitacao.css
+++ b/docs/css/solicitacao.css
@@ -18,23 +18,21 @@
 
 .content {
     display: flex;
+    background: url(../assets/images/fundo-agendamento.jpg);
+    background-size: 100%;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.4);
     overflow: hidden;
+    filter:sepia(20%);
+
 }
 
 .container-solicitacao {
     display: flex;
     justify-content: center;
     color: #000;
-}
-
-#content {
-    margin-top: 15px;
-    width: 90%;
 }
 
 form {
