--- a/docs/css/alterar-veiculo.css
+++ b/docs/css/alterar-veiculo.css
@@ -34,7 +34,7 @@
 
 .form-cadastro {
     width: 422px;
-    height: 735px;
+    height: 531px;
     background-color: #FFF;
     border-radius: 10px;
     padding: 20px 50px 20px 50px;
@@ -48,7 +48,8 @@
     border: 1px solid #bbb;
     background-color: #f5f5f5;
     padding: 0 10px 0 10px;
-    margin: 10px 10px 10px 0px;
+    margin: 15px 15px 15px 0px;
+    font-size: 16px;
 }
 
 .info-cadastro {
@@ -58,22 +59,18 @@
 }
 
 .info-cadastro label {
-    color: #0f0000;
-    padding-left: 15px;
+    color: #000;
 }
 
 #title-form {
+    margin-top: 20px;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .botao {
-    margin-top: 20px;
-}
-
-#button-cadastrar {
     display: flex;
     width: 322px;
     height: 50px;
@@ -87,19 +84,48 @@
     color: #FFF;
 }
 
+.botao:hover {
+    cursor: pointer;
+}
+
+#button-continuar {
+    margin-top: 55px;
+    position: relative;
+    bottom: 25px;
+}
+
+#botao-voltar {
+    width: 15%;
+    margin-top: 30px;
+}
+
+#botao-cadastrar {
+    width: 83%;
+    margin-top: 30px;
+}
+
+#box2 {
+    display: none;
+}
+
 @media only screen and (max-width: 768px) {
 
     .content {
         background-image: none;
         background-color: #FFF;
         width: 100vw;
-        height: 80vh;
+        height: 75vh;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
     .form-cadastro {
+        width: 422px;
+        height: 531px;
+        background-color: #FFF;
+        border-radius: 10px;
+        padding: 20px 50px 20px 50px;
         box-shadow: none;
     }
 }
