--- a/docs/css/perfil.css
+++ b/docs/css/perfil.css
@@ -448,12 +448,13 @@
 
 /* --- PERFIL MOBILE --- */
 
-@media (max-width: 1125px) and (max-height: 900px) {
+@media (max-width: 1125px){
     
     .content {
         display: flex;
-        height: 80vh;
+        height: 100vh;
         overflow: hidden;
+        flex-direction: column;
     }
     
 
@@ -575,7 +576,6 @@
         height: 100%;
         margin-top: -25px;
         margin-right: -15px;
-        filter: opacity(50%);
     }
 
     .active-perfil {
