--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -9,13 +9,13 @@
 
 header {
     width: 100%;
-    height: auto;
+    height: 85px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 #header {
     width: 100%;
-    height: 100%;
+    height: 85px;
     background-color: var(--color-background);
     justify-content: space-between;
     padding: 0 3%;
