--- a/docs/css/alterar-veiculo.css
+++ b/docs/css/alterar-veiculo.css
@@ -7,6 +7,10 @@
     font-family: "Montserrat", sans-serif;
 }
 
+body {
+    overflow: hidden;
+}
+
 .banner {
     width: 100%;
     background: url("./assets/images/bg-home-sm.jpg");
@@ -24,7 +28,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 87vh;
+    height: 92vh;
     display: flex;
     flex-direction: column;
     align-items: center;
