--- a/docs/css/user-recovery.css
+++ b/docs/css/user-recovery.css
@@ -7,6 +7,10 @@
     font-family: "Montserrat", sans-serif;
 }
 
+#header {
+    height: 93.4px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
 .banner {
     background: url(../assets/images/Imagem-login.jpeg);
