--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -8,8 +8,9 @@
 }
 
 .banner {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 
@@ -409,11 +410,6 @@
 /* --- VERSÃO MOBILE --- */
 
 @media (max-width: 1125px) {
-
-    body {
-        width: 100%;
-        height: auto;
-    }   
 
     /* --- BANNER --- */
 
