--- a/docs/css/solicitacao.css
+++ b/docs/css/solicitacao.css
@@ -9,7 +9,7 @@
 
 .banner {
     width: 100vw;
-    height: 100vh; 
+    height: 100vh;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -25,8 +25,7 @@
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    filter:sepia(20%);
-
+    filter: sepia(20%);
 }
 
 .container-solicitacao {
@@ -36,14 +35,15 @@
 }
 
 form {
-    max-width: 500px; 
-    height: auto; 
+    max-width: 500px;
+    height: auto;
     background-color: #fff;
     border-radius: 10px;
     flex-direction: column;
-    padding: 20px 50px; 
+    padding: 20px 50px;
     display: flex;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* Adiciona uma sombra suave */
 }
 
 .info-formes-solicitacao label,
@@ -59,23 +59,26 @@ form {
 }
 
 .info-formes-solicitacao input {
-    width: 100%; 
-    height: 40px; /* Reduz a altura dos campos de entrada */
+    width: 100%;
+    height: 40px;
+    /* Reduz a altura dos campos de entrada */
     border-radius: 5px;
     border: 1px solid #bbb;
     background-color: #f5f5f5;
     padding: 0 10px;
-    margin: 5px 0; 
+    margin: 5px 0;
 }
 
 .button-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px; /* Espaçamento entre os botões e o resto do formulário */
+    margin-top: 20px;
+    /* Espaçamento entre os botões e o resto do formulário */
 }
 
 .button-voltar {
-    width: 45%; /* Ajusta a largura dos botões */
+    width: 45%;
+    /* Ajusta a largura dos botões */
     margin-right: 10px;
 }
 
@@ -85,7 +88,8 @@ form {
     color: #fff;
     border-radius: 5px;
     flex-grow: 1;
-    cursor: pointer; /* Adiciona cursor de ponteiro nos botões */
+    cursor: pointer;
+    /* Adiciona cursor de ponteiro nos botões */
 }
 
 .tags {
@@ -102,8 +106,7 @@ form {
     padding: 8px;
 }
 
-.selected
-{
+.selected {
     background-color: #e4321e;
     color: white;
     font-weight: 700;
@@ -127,47 +130,73 @@ form {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
 
-  .consulta-form > label {
-    margin-right:10px;
-  }
-  
-  .consultar-cep {
+.consulta-form>label {
+    margin-right: 10px;
+}
+
+.consultar-cep {
     width: 20px;
     height: 20px;
     cursor: pointer;
     margin: 5px;
-  }
+}
 
-  .consulta-form input[type="text"] {
-    padding-right: 40px; /* Ajuste conforme necessário para dar espaço ao botão */
-    width: 200px; /* Ajuste conforme necessário */
-    height: 30px; /* Ajuste conforme necessário */
-    border: 1px solid #ccc; /* Adicione estilos de borda conforme necessário */
-    border-radius: 4px; /* Adicione bordas arredondadas conforme necessário */
-  }
-  
-  .consulta-form button {
+.consulta-form input[type="text"] {
+    padding-right: 40px;
+    /* Ajuste conforme necessário para dar espaço ao botão */
+    width: 200px;
+    /* Ajuste conforme necessário */
+    height: 30px;
+    /* Ajuste conforme necessário */
+    border: 1px solid #ccc;
+    /* Adicione estilos de borda conforme necessário */
+    border-radius: 4px;
+    /* Adicione bordas arredondadas conforme necessário */
+}
+
+.consulta-form button {
     position: absolute;
     top: 0;
     right: 0;
-    height: 100%; /* O botão deve ter a mesma altura que o campo de entrada */
-    padding: 0 10px; /* Ajuste conforme necessário para o espaçamento interno do botão */
-    background-color: #007bff; /* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
-    border: none; /* Remova a borda do botão */
-    border-top-right-radius: 4px; /* Arredonde apenas o canto superior direito do botão */
-    border-bottom-right-radius: 4px; /* Arredonde apenas o canto inferior direito do botão */
-    cursor: pointer; /* Altere o cursor ao pairar sobre o botão */
-  }
-  
-  .consulta-form button:hover {
-    background-color: #0056b3; /* Altere a cor de fundo ao passar o mouse sobre o botão */
-  }
+    height: 100%;
+    /* O botão deve ter a mesma altura que o campo de entrada */
+    padding: 0 10px;
+    /* Ajuste conforme necessário para o espaçamento interno do botão */
+    background-color: #007bff;
+    /* Cor de fundo do botão */
+    color: #fff;
+    /* Cor do texto do botão */
+    border: none;
+    /* Remova a borda do botão */
+    border-top-right-radius: 4px;
+    /* Arredonde apenas o canto superior direito do botão */
+    border-bottom-right-radius: 4px;
+    /* Arredonde apenas o canto inferior direito do botão */
+    cursor: pointer;
+    /* Altere o cursor ao pairar sobre o botão */
+}
 
-  .campo-vazio {
+.consulta-form button:hover {
+    background-color: #0056b3;
+    /* Altere a cor de fundo ao passar o mouse sobre o botão */
+}
+
+.campo-vazio {
     border: 1px solid red;
-  }
+}
 
-  
+@media (max-width: 780px) {
+    .content {
+        display: flex;
+        background: none;
+        background-color: #fff;
+        justify-content: center;
+        align-items: center;
+    }
+
+    form {
+        box-shadow: none;
+    }
+}
