--- a/docs/css/alterar-veiculo.css
+++ b/docs/css/alterar-veiculo.css
@@ -66,12 +66,16 @@ body {
     color: #000;
 }
 
-#title-form {
+.title-form {
     margin-top: 20px;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 20px;
+}
+
+.subtitle-form {
+    text-align: center;
 }
 
 .botao {
@@ -112,6 +116,27 @@ body {
     display: none;
 }
 
+.load {
+    width: 100px;
+    height: 100px;
+    margin: 120px auto 120px;
+    border: solid 10px #e4321e;
+    border-radius: 50%;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    -webkit-transition: all 0.5s ease-in;
+    -webkit-animation-name: rotate;
+    -webkit-animation-duration: 1.0s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    transition: all 0.5s ease-in;
+    animation-name: rotate;
+    animation-duration: 1.0s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
 @media only screen and (max-width: 768px) {
 
     .content {
@@ -131,5 +156,25 @@ body {
         border-radius: 10px;
         padding: 20px 50px 20px 50px;
         box-shadow: none;
+    }
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes rotate {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
     }
 }
